# BasicVSR-YUV420

./: .gitignore  README.md  pyproject.toml  requirements.txt
outputs/: README.md
outputs/baseline_rgb_v3_noamp_lr1e4_bs2_acc2/: config.json  history.json  state.json
outputs/baseline_rgb_v7_yuv420_input_tuned_bs4_vb1_nw1/: config.json  history.json  state.json  train.command.txt
outputs/frequency_domain_low_frequency_fusion_v2_rgb_objective_bs4_vb1_nw6/: config.json  history.json  state.json  train.command.txt
outputs/frequency_domain_low_frequency_fusion_v2_rgb_objective_bs7_vb1_nw2/: config.json  history.json  state.json  train.command.txt
outputs/inference_benchmarks_20260331_50frames/: basicvsr_rgb_baseline.memory_10hz.csv  frequency_domain_low_frequency_fusion.memory_10hz.csv  low_res_joint_y_head.memory_10hz.csv  summary.json  uv_conditioned_film.memory_10hz.csv
outputs/low_res_joint_y_head_v2_bs8_vb1_nw4/: config.json  gpu_trace_10s.csv  history.json  state.json  train.command.txt
outputs/low_res_joint_y_head_v3_rgb_objective_bs8_vb1_nw4/: config.json  history.json  state.json  train.command.txt
outputs/uv_conditioned_film_v3_rgb_objective_bs6_vb6_nw1/: config.json  history.json  state.json  (+1 more)
results/: performance.md  psnr.md
scripts/: benchmark_batch_sizes.py  benchmark_inference_models.py  benchmark_num_workers.py  download_reds.py  evaluate.py  infer.py  plot_history.py  profile_training_pipeline.py  train.py
tests/: test_benchmark_inference_models.py  test_evaluate_statistics.py  test_rgb_input_modes.py  test_rgb_objective_models.py
(+34 files in other folders)
